Implement RTR
Co-authored-by: Cursor <cursoragent@cursor.com>